--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
 <link rel="stylesheet" href="assets/css/styles.css">
-<title>PHUNG NGUYEN LINH - Thông tin cá nhân</title>
+<title>Phung Nguyen Linh - Thông tin cá nhân</title>
 </head>
 <body>
 
@@ -24,7 +24,7 @@
 <img src="assets/images/avt.png" alt="avt" style="width:540px;height:120px;">
 </div>
 </div>
-<h2 class="profile__name">PHUNG NGUYEN LINH</h2>
+<h2 class="profile__name">Phung Nguyen Linh</h2>
 <h3 class="profile__profession">Developer - Designer - Coder</h3>
 <ul class="profile__social">
 <a href="https://www.instagram.com/phungnguyenlinhdepzais1tg" target="_blank" class="profile__social-link">
