--- a/payment/index.html
+++ b/payment/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>PHUNG NGUYEN LINH - Thông tin thanh toán</title>
+<title>Phung Nguyen Linh - Thông tin thanh toán</title>
 <link href="https://phungnguyenlinhinfo.github.io/hidden/assets/images/avt.png" rel="shortcut icon" type="image/x-icon" />
 <meta content="Giới thiệu thông tin thanh toán của PHUNG NGUYEN LINH" property="og:title" />
 <meta content="https://cdn.trinhngocminh.com" property="og:url" />
@@ -46,7 +46,7 @@
 </div>
 <div class="header__base-info">
 <h2 class="title titl--h1 Ubuntu">
-<b>PHUNG NGUYEN LINH <img src="assets/img/tich-xanh.png" style="height: 24px;" /></b>
+<b>Phung Nguyen Linh<img src="assets/img/tich-xanh.png" style="height: 24px;" /></b>
 </h2>
 <div class="skill-item" style="color: #ef9d64;"><b>Developer - Designer - Coder</b></div>
 <ul class="header__social">
@@ -155,7 +155,7 @@
 </div>
 
 <footer class="footer">
-© PHUNG NGUYEN LINH All rigths reserved
+© Phung Nguyen Linh All rigths reserved
 </footer>
 </div>
 </div>
