--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- Include a required theme -->
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 		<meta charset="utf-8">
-		<title>𝙋𝙃𝙐𝙉𝙂 𝙉𝙂𝙐𝙔𝙀𝙉 𝙇𝙄𝙉𝙃<3</title>
+		<title>𝙋𝙃𝙐𝙉𝙂 𝙉𝙂𝙐𝙔𝙀𝙉 𝙇𝙄𝙉𝙃</title>
 		<style type="text/css">
 			/* CSS Document */
 			* {
@@ -143,7 +143,7 @@
 					<p class="bio">You can't beat me because I'm your IT ... !</p>
 					<p class="bio">I will use my power ...</p>
 					<br>
-					<p class="color_1">ＯＰＥＲＡＴＯＲ：𝙋𝙃𝙐𝙉𝙂 𝙉𝙂𝙐𝙔𝙀𝙉 𝙇𝙄𝙉𝙃＜３</p>
+					<p class="color_1">R U N  BY : 𝙋𝙃𝙐𝙉𝙂 𝙉𝙂𝙐𝙔𝙀𝙉 𝙇𝙄𝙉𝙃＜３</p>
 					<!-- <p class="color_1"></p> -->
 					<br>
 					<p class="deeppink">/ . . . /</p>
@@ -154,7 +154,7 @@
 			</div>
 		</div>
 		<script>
-			var audio = new Audio('phungnguyenlinh/somewhereonlyweknow-rhianne.mp3');
+			var audio = new Audio('phungnguyenlinh/chodoicodangso.mp3');
       
 			audio.oncanplaythrough = function(){
 			audio.play();
