--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- Include a required theme -->
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 		<meta charset="utf-8">
-		<title>𝙋𝙃𝙐𝙉𝙂 𝙉𝙂𝙐𝙔𝙀𝙉 𝙇𝙄𝙉𝙃</title>
+		<title>𝗣 𝗛 𝗨 𝗡 𝗚  𝗡 𝗚 𝗨 𝗬 𝗘 𝗡  𝗟 𝗜 𝗡 𝗛 | 𝗛𝗢𝗠𝗘</title>
 		<style type="text/css">
 			/* CSS Document */
 			* {
@@ -139,14 +139,14 @@
 			<img src="https://phungnguyenlinhinfo.github.io/hidden/assets/images/avt.png" alt="">
 			<div class="content_r clearfix">
 				<div class="content_l clearfix">
-					<h2>Phung Nguyen Linh say hi to you <3</h2>
-					<p class="bio">You can't beat me because I'm your IT ... !</p>
-					<p class="bio">I will use my power ...</p>
+					<h2>xin chào tôi là Phùng Nguyên Linh</h2>
+					<p class="bio">私はあなたの IT であるため、あなたは私を打ち負かすことはできません ... !</p>
+					<p class="bio">あなたの時間、あなたのやり方で</p>
 					<br>
-					<p class="color_1">R U N  BY : 𝙋𝙃𝙐𝙉𝙂 𝙉𝙂𝙐𝙔𝙀𝙉 𝙇𝙄𝙉𝙃＜３</p>
+					<p class="color_1">𝗣 𝗛 𝗨 𝗡 𝗚  𝗡 𝗚 𝗨 𝗬 𝗘 𝗡  𝗟 𝗜 𝗡 𝗛</p>
 					<!-- <p class="color_1"></p> -->
 					<br>
-					<p class="deeppink">/ . . . /</p>
+					<p class="deeppink">@phungnguyenlinh</p>
 					<div class="link">
 						<a href="https://www.facebook.com/PhungNguyenLinh.FAQ" class="dodgerblue" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
 						<a href="https://github.com/phungnguyenlinhinfo" class="black" target="_blank"><i class="fa fa-github"></i> Github</a>
@@ -154,7 +154,7 @@
 			</div>
 		</div>
 		<script>
-			var audio = new Audio('phungnguyenlinh/chodoicodangso.mp3');
+			var audio = new Audio('phungnguyenlinh/chacemdaquenroi-speedup.mp3');
       
 			audio.oncanplaythrough = function(){
 			audio.play();
@@ -351,8 +351,8 @@ img.src = "https://i.imgur.com/R9XUjfF.png";
 			Swal.fire();
 
 			Swal.fire(
-				'Phung Nguyen Linh',
-				'Xin chào, tôi là PhungNguyenLinh',
+				'@PhungNguyenLinh.FAQ',
+				'Facebook: (p n l)',
 				'success'
 			)
 		</script>
