--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<p class="color_1">𝗣 𝗛 𝗨 𝗡 𝗚  𝗡 𝗚 𝗨 𝗬 𝗘 𝗡  𝗟 𝗜 𝗡 𝗛</p>
 					<!-- <p class="color_1"></p> -->
 					<br>
-					<p class="deeppink">@phungnguyenlinh</p>
+					<p class="deeppink">@phungnguyenlinhinfo</p>
 					<div class="link">
 						<a href="https://www.facebook.com/PhungNguyenLinh.FAQ" class="dodgerblue" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
 						<a href="https://github.com/phungnguyenlinhinfo" class="black" target="_blank"><i class="fa fa-github"></i> Github</a>
