--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 		</style>
 		<!---->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" href="https://phungnguyenlinhinfo.github.io/hidden/assets/images/avt.png" type="image/x-icon">
+        <link rel="shortcut icon" href="https://phungnguyenlinhinfo.ddns.net/hidden/assets/images/avt.png" type="image/x-icon">
 	</head>
 	<body onclick="audio.play()">	
 		<div class="content">
-			<img src="https://phungnguyenlinhinfo.github.io/hidden/assets/images/avt.png" alt="">
+			<img src="https://phungnguyenlinh.ddns.net/hidden/assets/images/avt.png" alt="">
 			<div class="content_r clearfix">
 				<div class="content_l clearfix">
 					<h2>xin chào tôi là Phùng Nguyên Linh</h2>
@@ -146,7 +146,7 @@
 					<p class="color_1">𝗣 𝗛 𝗨 𝗡 𝗚  𝗡 𝗚 𝗨 𝗬 𝗘 𝗡  𝗟 𝗜 𝗡 𝗛</p>
 					<!-- <p class="color_1"></p> -->
 					<br>
-					<p class="deeppink">@phungnguyenlinhinfo</p>
+					<p class="deeppink">phungnguyenlinh.ddns.net</p>
 					<div class="link">
 						<a href="https://www.facebook.com/PhungNguyenLinh.FAQ" class="dodgerblue" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
 						<a href="https://github.com/phungnguyenlinhinfo" class="black" target="_blank"><i class="fa fa-github"></i> Github</a>
