--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="Topnav">
       <!-- ===== Navigation Bar ===== -->
       <a class="Active">HOME</a>
-      <a href="payment">BANK</a>
+      <a href="hidden">BANK</a>
       <!-- <a href="./download/">DOWNLOAD</a> -->
       <!--
     /*
@@ -54,12 +54,12 @@
     </p>
     <h2 class="NameFtNguyenLinh">
       <div id="userName">
-        Phung Nguyen Linh <img src="https://nhanhoa.com/uploads/attach/1618816460_tich_xanh_facebook.png" width="11"
+        @𝙥𝙝𝙪𝙣𝙜𝙣𝙜𝙪𝙮𝙚𝙣𝙡𝙞𝙣𝙝<img src="https://nhanhoa.com/uploads/attach/1618816460_tich_xanh_facebook.png" width="11"
           height="11" alt="Tích Xanh">
       </div>
     </h2>
     <h2 class="TieuSu">
-      Welcome guest, I'm a Developer.<br>I like website design</h2> <br>
+   wellcome to website me</h2> <br>
     <br>
     <hr class="New"><br>
     <ul class="icons">
