--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ window.onload = bgChange;
     function fireSweetAlert() {
       Swal.fire(
         'PhungNguyenLinh',
-        'Welcome to website PhungNguyenLinh.ddns.net !',
+        'Welcome to website PhungNguyenLinh.ddns.net',
         'success'
       )
     }
